--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           type="text/css">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/js/main.js}" type="text/javascript"></script>
     <link rel="icon">
 </head>
 
@@ -67,50 +69,20 @@
                 <h2 class=""><i class="fa fa-fw fa-plus"></i>신규 등록 번개</h2>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="list-group">
-                            <a href="#"
-                               class="list-group-item list-group-item-action flex-column align-items-start active">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group</h5>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p> <small>Donec id elit non mi porta.</small>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group </h5>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p> <small class="text-muted">Donec id elit non mi
-                                porta.</small>
-                            </a>
+                        <div class="list-group" id="new-list">
+
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 border-dark border border-left-0">
-                <div class="col-md-12 border">
+                <div class="col-md-12">
                     <h2 class=""><i class="fa fa-fw fa-clock-o"></i>마감 임박 번개</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="list-group">
-                            <a href="#"
-                               class="list-group-item list-group-item-action flex-column align-items-start active">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group</h5>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p> <small>Donec id elit non mi porta.</small>
-                            </a>
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">List group </h5>
-                                </div>
-                                <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget
-                                    risus varius blandit.</p> <small class="text-muted">Donec id elit non mi
-                                porta.</small>
-                            </a>
+                        <div class="list-group" id="deadline-list">
+
                         </div>
                     </div>
                 </div>
@@ -149,9 +121,7 @@
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
