--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/map.css">
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3ee55d752effcbc08eda7914b122df74&libraries=services"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/js/map.js}" type="text/javascript"></script>
 </head>
 
 
@@ -47,45 +49,8 @@
                         </div>
                     </div>
                 </form>
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                        </div>
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                        </div>
-                    </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a><a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1">번개명</h5> <small class="text-muted">일시</small>
-                    </div>
-                </a>
+                <div class="list-group" id="bungae-list">
+
                 </div>
             </div>
             <div class="col-md-8 d-flex flex-row justify-content-end align-items-center" id="map"
@@ -130,9 +95,7 @@
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
