--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,6 +8,7 @@
           type="text/css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script th:src="@{/js/logout.js}" type="text/javascript"></script>
     <script th:src="@{/js/main.js}" type="text/javascript"></script>
     <link rel="icon">
 </head>
@@ -30,7 +31,7 @@
                 <li class="nav-item"><a class="nav-link" href="bungae_ing">참여목록</a></li>
                 <li class="nav-item"><a class="nav-link" href="profile" th:href="@{profile}">프로필</a></li>
             </ul>
-            <a class="btn navbar-btn ml-md-2 btn-light text-dark" href="login">로그인<br></a>
+            <a id="loginLogoutButton" class="btn navbar-btn ml-md-2 btn-light text-dark" href="#">로그인<br></a>
         </div>
     </div>
 </nav>
